# two-coords

./: .appveyor.yml  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md
docs/: welcome.md
example/: CMakeLists.txt  exampleScene.cpp  exampleScene.h  main.cpp
example/assets/: prototype_button.tga  prototype_player.tga  tiles.csv  tiles.tmx
include/: bitmap.h  camera.h  font.h  renderer.h  resource.h  resourceManager.h  scene.h  sceneAnimatedObject.h  sceneButton.h  sceneGUIObject.h  sceneManager.h  sceneMap.h  sceneNode.h  sceneObject.h  sceneSound.h  sceneText.h  shader.h  shaderProgram.h  soundBuffer.h  spriteMapShader.h  spriteShader.h  textShader.h  texture.h  textureMap.h  tileMap.h  twoCoords.h  version.h.in  window.h
src/: CMakeLists.txt  bitmap.cpp  camera.cpp  font.cpp  renderer.cpp  resourceManager.cpp  scene.cpp  sceneAnimatedObject.cpp  sceneButton.cpp  sceneGUIObject.cpp  sceneManager.cpp  sceneMap.cpp  sceneNode.cpp  sceneObject.cpp  sceneSound.cpp  sceneText.cpp  shader.cpp  shaderProgram.cpp  soundBuffer.cpp  texture.cpp  textureMap.cpp  tileMap.cpp  twoCoords.cpp  window.cpp
tests/: CMakeLists.txt  init.cpp  window.cpp
